--- a/css/travelStyle.css
+++ b/css/travelStyle.css
@@ -49,65 +49,64 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-
 /* ----------------------------------------------------------------
 General stylesheet
 -----------------------------------------------------------------*/
 body {
+  background-clip: border-box; 
+  background-color: darkblue;
+  background-image: url(../graphics/beach.jpeg);
+  background-repeat: no-repeat;
+  background-size: auto;
+  color: #ffbf00;
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
   /*	background-color: #780E24; */
   /*  background-color: #ccffff; */
-  background-color: darkblue;
-  background-image: url(graphics/beach2.jpeg);
-  background-repeat: no-repeat;
-  background-size: auto;
-  background-clip: border-box;
-  /* color: cornsilk; */
-  color: #ffbf00;
+  /* color: cornsilk; */    
 }
 
 h1 {
+  bottom: 50%;
   font-size: 32px;
   font-weight: bold;
-  text-align: center;
-  top: 50%;
-  bottom: 50%;
-  width: 80%;
-  margin: auto;
   padding: 10px;
+  margin: auto;
+  text-align: center;
+  top: 50%;  
+  width: 80%;  
   /* --- used for testing purposes ---
   border: 1px solid black; */
 }
 
 h2 {
+  color: rgb(255, 217, 24);
+  display: block;
   font-size: 26px;
   font-weight: bold;
+  margin: 10px 0;  
   text-align: center;
-  display: block;
-  margin: 10px 0;
   /*color: orange; */
-  color: rgb(255, 217, 24);
 }
 
 h3 {
+  display: block;
   font-size: 24px;
   font-weight: bold;
-  text-align: left;
-  display: block;
   margin-top: 10px;
+  text-align: left;  
 }
 
 header {
+  color: #ffbf00;
   display: block;
   position: absolute;
-  width: 100%;
+  text-shadow: 2px 1px 2px #005da4;
+  width: 100%;  
   /*color: rgb(254, 245, 181);*/
   /* color: #b5e3fe; */
   /* color: #0185ea; */
   /* color: #cf9b00; */
   /*color: #ff9200;*/
-  color: #ffbf00;
-  text-shadow: 2px 1px 2px #005da4;
 }
 
 /*
@@ -118,14 +117,13 @@ header img {
 }
 */
 
-main {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin: auto;
-  padding: 10px;
-  border: 1px solid white;
+#txtFName, #txtLName, #txtEmail, #txtAddress, #txtApartment, #txtCity, #txtState, #txtZip, #txtPhone {
+  color:yellow;
+  display: inline;  
+  font-size: smaller;
+  font-weight:bold;  
 }
+
 /* STYLES FOR THE IMAGE GALLERY ON THE HOME PAGE */
 /*
 .slide-image {
@@ -143,45 +141,51 @@ main {
 .gallery {
   border: 5px white solid;
   border-radius: 15px;
-  width: 600px;
-  padding: 10px;
-  align: center;
   margin: auto;
+  padding: 10px;
+  width: 600px;
 }
 
 .images {
-  width: 500px;
   height: 300px;
   margin: auto;
+  width: 500px;
 }
 
 .container {
+  align-items: center;
+  background-color: rgb(0,75,133);
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-  background-color: white;
 }
 
 .previous, .next {
+  background-color: rgb(0,75,133);
+  border-radius: 5px;
+  color: white;  
   font-size: 48px;
   margin: 20px;
-/*  background-color: rgb(0,75,133); */
-  background-color: rgb(0,75,133);
-/*  border: 1px solid red;*/
-  color: white;
   padding: 0 10px 10px 10px;
+  /*  background-color: rgb(0,75,133); */
+  /*  border: 1px solid red;*/
 }
 
-article p {
-  padding: 10px 0;
-  margin: auto;
+.previous:hover, .next:hover {
+  background-color: #eee;
+  color: rgb(0,75,133);
+}
+
+article p, main p {
   line-height: 24px;
+  padding: 10px 0;  
+/*  margin: auto; */  
 }
 
 #intro {
   display: flex;
   position: relative;
+  z-index: -1;
 }
 
 legend {
@@ -192,21 +196,21 @@ legend {
 
 fieldset {
   border: 1px solid white;
-  padding: 10px;
   margin: 10px;
+  padding: 10px;
 }
 
 .address {
   display: inline;
-  float: right;
   font-size: 12px;
+  float: right;
 }
 
 .wrapper {
-  position: absolute;
-  width: 100%;
-  top: 125px;
   box-sizing: border-box;
+  position: absolute;
+  top: 125px;
+  width: 100%;  
   /* --- used for testing purposes ---
   border: 1px solid black; */
 }
@@ -223,82 +227,86 @@ fieldset {
   padding: 10px;
 }
 */
-#left_center {
-
-}
-
-#right_center {
-
-}
-
-#right {
-
-}
 
 .selections {
   border: 1px solid white;
 }
 
 input, select {
-  padding: 10px;
   margin: 10px 10px;
+  padding: 10px;
   /*	border: 1px solid black; */
 }
 
 label {
-  padding: 20px 10px;
-  margin: 20px;
   font-size: 20px;
   font-weight: 600;
+  margin: 20px;
+  padding: 20px 10px;
   /* --- used for testing purposes ---
   border: 1px solid black; */
 }
 
 nav {
-  position: relative;
-  float: left;
-  width: 15%;
-  clear: both;
-  padding: 10px;
   box-sizing: border-box;
+  clear: both;
+  float: left;
+  padding: 10px;
+  position: relative;
+  width: 15%;
 }
 
 nav a {
-  padding: 10px;
-  margin: 10px 0;
-  text-decoration: none;
   background-color: rgb(0,75,133);
-  text-shadow: 2px 2px 2px #cf7600;
-  box-shadow: 2px 2px 2px #cf7600;
   border-radius: 10px;
-  /* rgb(2, 46, 61); */
-  /*	color: rgb(126, 83, 133); */
-  /*	text-shadow: 2px 2px 2px rgb(210, 118, 105);
-  box-shadow: 2px 2px 2px rgb(210, 118, 105);
-  */
-  /*	border: 1px solid green; */
+  box-shadow: 2px 2px 2px #cf7600;
   display: flex;
   flex-direction: column;
+  margin: 10px 0;
+  padding: 10px;
+  text-align: center;
+  text-decoration: none;
+  text-shadow: 2px 2px 2px #cf7600;   
+  /*	border: 1px solid green; */
+  /*  box-shadow: 2px 2px 2px rgb(210, 118, 105);  */
+  /*	color: rgb(126, 83, 133); */
+  /*  rgb(2, 46, 61); */  
+  /*	text-shadow: 2px 2px 2px rgb(210, 118, 105); */
+}
+
+nav a:hover {
+  background-color: #ffbf00;
+  color: rgb(0,75,133);
 }
 
 article {
   /* clear: both; */
-  width: 60%;
-  margin: auto;
+  box-sizing: border-box;
+  color: white;
   display: inline-flex;
   justify-content: space-around;
-  color: white;
+  margin: auto;
   opacity: 1;
-  box-sizing: border-box;;
   padding: 0 20px;
+  width: 60%;
+}
+
+main {
+  background-color: rgb(0,75,133);
+  border: 1px solid white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  padding: 10px;
 }
 
 #customerArticle, #summaryArticle {
+  align-content: flex-start;
   display: inline-flex;
   flex-direction: column;
-  align-content: flex-start;
-  padding-left: 10px;
   margin-left: 10px;
+  padding-left: 10px;
 }
 
 #contactArticle {
@@ -312,30 +320,32 @@ article {
 }
 */
 
+/*
 form {
   display: inline;
 }
+*/
 
 aside {
-  position: relative;
-  float: right;
-  width: 25%;
-  box-sizing: border-box;
-  padding: 10px;
   background-color: rgba(0,75,133,0.3);
+  box-sizing: border-box;
+  float: right;
+  padding: 10px;
+  position: relative;
+  width: 25%;  
 }
 
 .cookieDisplay {
-  position: relative;
-  display: flex;
-  flex-direction: row;
   align-content: space-between;
   align-items: center;
-  width: 100%;
-  padding: 10px;
   border: 1px solid white;
-  box-sizing: border-box;
   box-shadow: 2px 2px 2px rgb(210, 118, 105);
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;  
+  padding: 10px;
+  position: relative;
+  width: 100%;    
 }
 
 .travelDescription {
@@ -350,24 +360,26 @@ aside {
 }
 
 .entryForm {
-  clear: both;
-  position: relative;
-  display: flex;
-  width: 100%;
-  margin-top: 10px;
   border: 1px solid white;
+  clear: both;
+  display: flex;
+  margin-top: 10px;
+  position: relative;
+  width: 100%;
 }
 
 .entryForm label {
-  padding: 20px 10px;
-  margin: 20px 20px 20px 0;
   font-size: 16px;
   font-weight: 600;
+  margin: 20px 20px 20px 0;
+  padding: 20px 10px;
 }
 
+/*
 .entryForm div {
   border: 1px solid red;
-}
+*/
+
 /*
 .menu{
   background-color: #F45D24;
@@ -401,7 +413,11 @@ aside {
   visibility: hidden;
 }
 
-input[type=button], input[type=submit] {
+.buildLabel {
+	margin-bottom: 10px;
+}
+
+input[type=button], input[type=submit], button {
   /*background-color: #ffbf00; */
   /*background-color: #4CAF50; */
   /*background-color: #005da4;*/
@@ -409,23 +425,43 @@ input[type=button], input[type=submit] {
   /*background-color: #6693b5;*/
   /*background-color: #ccdbe6;*/
   /*background-color: #4c81a9;*/
-  background-color: #b3b1ab;
   /*border: 1px solid rgb(0,75,133);*/
-  border: 1px solid black;
-  border-radius: 5px;
-  color: black;
-  /*color: rgb(0,75,133);*/
   /*box-shadow: 2px 2px 2px #ffbf00;*/
+  /*color: rgb(0,75,133);*/
+  /*padding: 16px 32px;*/  
+  border: 1px solid #888;
+  background-color: #dfdfdf;
+  border-radius: 5px;  
+  color: black;
+  cursor: pointer;
   font-weight: 600;
-  /*padding: 16px 32px;*/
+  margin: 4px 2px;
   padding: 10px;
   text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
+}
+
+input[type=button]:hover, input[type=submit]:hover, button:hover {
+  background-color: #efefef;
 }
 
 .icon {
   display: none;
+}
+
+/*-----------------------------------------------------
+Styles for Tables
+-----------------------------------------------------*/
+th, td {
+  margin: 10px;
+  max-width: 300px;
+  padding: 10px;
+}
+
+.table-summary {
+  border-top-color: #fff;
+  -moz-border-top-colors: #fff;
+  border-top-style: solid;
+  border-top-width: 1px;
 }
 
 /* ----------------------------------------------------
@@ -434,15 +470,15 @@ work :/
 ------------------------------------------------------*/
 button.accordion {
   background-color: #eee;
+  border: none;
   color: #444;
   cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
   font-size: 15px;
+  outline: none;
+  padding: 18px;
+  text-align: left;
   transition: 0.4s;
+  width: 100%;  
 }
 
 button.accordion.active, button.accordion:hover {
@@ -457,24 +493,33 @@ div.panel {
   transition: max-height 0.2s ease-out;
 }
 
-@media only screen and (max-width: 1130px) {
+/*-----------------------------------------------------
+Responsive design - styles for smaller screens
+-----------------------------------------------------*/
+@media only screen and (max-width: 1295px) {
 	header {
 	  display: flex;
 	  flex-direction: column;
 	}
 
 	.address, h1 {
-	  width: 100%;
 	  margin: auto;
 	  text-align: center;
+	  width: 100%;    
 	}
 
+	/*
+	#Name, #Address {
+		display: flex;
+		flex-direction: column;
+	}
+	*/
 }
 
 @media only screen and (max-width: 865px) {
 
 	.wrapper {
-      display: flex;
+    display: flex;
 	  flex-direction: column;
       /* -- Used for testing purposes --
 	  border: 1px solid red;
@@ -482,40 +527,39 @@ div.panel {
 	}
 
 	nav {
-	  position: absolute;
+	  align-items: center;
+	  box-sizing: border-box;
+	  clear: both;
 	  display: flex;
 	  flex-direction: row;
-	  align-items: center;
-	  clear: both;
-	  padding: 10px;
-	  box-sizing: border-box;
 	  order: 0;
+	  padding: 10px;
+	  position: absolute;
 	}
 
 	nav a {
-	  padding: 10px;
-	  margin: 10px auto;
+	  align-content: center;
 	  display: flex;
 	  flex-direction: row;
-	  align-content: center;
+	  margin: 10px auto;
+	  padding: 10px;
 	}
 
-	article {
+	article, main {
 	  clear: none;
-	  display: flex;
 	  margin-top: 75px;
 	}
 
 	aside {
-      align-items: space-between;
+    align-items: space-between;
 	}
 
 	#priceSum {
 	  margin-left: auto;
   }
 
-	article, aside, nav {
-      display: flex;
+	article, main, aside, nav {
+    display: flex;
 	  width: 100%;
     /* -- Used for testing purposes --
 	  border: 1px solid green;
@@ -523,8 +567,8 @@ div.panel {
 	}
 
 	.selections, .specialty {
-      display: flex !important;
 	  align-items: center !important;
+    display: flex !important;
 	  flex-flow: row wrap;
 	}
 }
@@ -535,23 +579,25 @@ div.panel {
 	}
 
   label {
-	padding: 0;
 	margin: 10px;
+	padding: 0;
   }
 
   h1 {
     font-size: 28px;
   }
-
+  h2 {
+    z-index: 0;
+  }
   .wrapper {
-    top: 150px !important;
-	max-width: 375px !important;
-	min-width: 220px !important;
-	width: 100% !important;
-	margin: auto !important;
+	  margin: auto !important;
+	  max-width: 375px !important;
+	  min-width: 220px !important;
+    top: 150px !important;    
+	  width: 100% !important;
   }
 
-  article {
+  article, main {
     padding: 0 5px;
   }
 
@@ -560,30 +606,32 @@ div.panel {
   }
 
   nav a.icon {
+	  display: block;
     float: right;
-	display: block;
   }
 
   nav.responsive {
     /*	position: relative; */
-	display: flex;
-	flex-direction: column;
-	background-color: #002949;
-	opacity: 0.95;
+	  display: flex;
+	  flex-direction: column;
+	  background-color: #002949;
+	  opacity: 0.95;
+    z-index: 100;
   }
 
   nav.responsive a.icon {
     position: absolute;
-	right: 0;
-	top: 0;
+	  right: 0;
+	  top: 0;
   }
 
   nav.responsive a {
+	  display: block;
     float: none;
-	display: block;
-	text-align: left;
     margin: 0;
-	opacity: 1;
+	  opacity: 1;
+	  text-align: left;
+    z-index: 100;
   }
 }
 
